# remote-dev

./: .dockerignore  .env.local.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  DEPLOY.md  DESIGN.md  DOLT_REMOTE.md  Dockerfile  INSTALL.md  PRODUCT.md  PROMPT.md  README.md  arhapkevl2igphudtjhf47s6oehjkbsv.darc  drizzle.config.ts  drizzle.pg.config.ts  electron-builder.json5  eslint.config.mjs  issues.jsonl  iuv9tfdgvvu6oovitghub9msn8goadss.darc  manifest  next.config.ts  package.json  skills-lock.json  tsconfig.json  vitest.config.ts  vitest.pg.config.ts
.antigravitycli/: 93e22c0e-4e04-43b9-8a02-633bc3e38bac.json
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/: .mcp.json  CLAUDE.md  orchestrator-notify.mjs  ralph-loop.local.md
.claude-plugin/: marketplace.json  plugin.json
.github/: FUNDING.yml
.opencode/: ralph-loop.state.json
agents/: rdv-orchestrator.md
blog/: post.md
commands/: rdv-status.md
config/: cloudflared.example.yml
crates/: Cargo.toml
crates/rdv/: Cargo.toml
crates/rdv-core/: Cargo.toml
crates/rdv-core/src/: error.rs  lib.rs  types.rs
crates/rdv-core/src/auth/: mod.rs
crates/rdv-core/src/client/: mod.rs
crates/rdv-core/src/db/: mod.rs  types.rs
crates/rdv-core/src/learning/: mod.rs
crates/rdv-core/src/mcp/: mod.rs
crates/rdv-core/src/memory/: consolidation.rs  mod.rs  service.rs  store.rs  traits.rs
crates/rdv-core/src/note/: extraction.rs  mod.rs  service.rs  summary.rs
crates/rdv-core/src/orchestrator/: insight.rs  mod.rs
crates/rdv-core/src/project/: mod.rs
crates/rdv-core/src/session/: lifecycle.rs  mod.rs
crates/rdv-core/src/tmux/: mod.rs
crates/rdv-core/src/worktree/: mod.rs
crates/rdv-sdk/: Cargo.toml
crates/rdv-sdk/src/: config.rs  error.rs  lib.rs  sdk.rs
crates/rdv-sdk/src/extensions/: builders.rs  composition.rs  hooks.rs  loader.rs  mcp_adapter.rs  mod.rs  registry.rs  types.rs
crates/rdv-sdk/src/extensions/migrations/: 001_extensions_tables.sql  mod.rs
crates/rdv-sdk/src/memory/: embeddings.rs  hierarchical.rs  mod.rs  store.rs  types.rs
crates/rdv-sdk/src/memory/migrations/: 001_memory_tables.sql  mod.rs
crates/rdv-sdk/src/meta_agent/: agent.rs  benchmark.rs  generators.rs  mod.rs  refinement.rs  traits.rs  types.rs
crates/rdv-sdk/src/meta_agent/migrations/: 001_meta_agent_tables.sql  mod.rs
crates/rdv-sdk/src/utils/: hashing.rs  mod.rs  time.rs  validation.rs
crates/rdv-server/: Cargo.toml
crates/rdv-server/src/: config.rs  main.rs  state.rs
crates/rdv-server/src/mcp/: meta_agent_tools.rs  mod.rs  sdk_tools.rs  server.rs
crates/rdv-server/src/mcp/tools/: folder.rs  mod.rs  orchestrator.rs  session.rs
crates/rdv-server/src/middleware/: auth.rs  mod.rs
crates/rdv-server/src/routes/: events.rs  extensions.rs  folders.rs  health.rs  hooks.rs  insights.rs  knowledge.rs  logs.rs  memory.rs  meta.rs  mod.rs  notes.rs  orchestrators.rs  profiles.rs  sessions.rs  tokens.rs  worktrees.rs
crates/rdv-server/src/services/: consolidation.rs  distillation.rs  insight.rs  mod.rs  monitoring.rs
crates/rdv-server/src/sse/: broadcaster.rs  mod.rs
crates/rdv/.claude/: settings.json
crates/rdv/src/: api.rs  cli.rs  client.rs  config.rs  database.rs  db.rs  error.rs  main.rs  tmux.rs
crates/rdv/src/commands/: agent.rs  auth.rs  browser.rs  channel.rs  context.rs  crown.rs  delegate.rs  doctor.rs  escalate.rs  ext.rs  folder.rs  group.rs  hook.rs  indicator.rs  insights.rs  knowledge.rs  learn.rs  mail.rs  master.rs  memory.rs  meta.rs  migrate.rs  mod.rs  monitor.rs  note.rs  notes.rs  notification.rs  nudge.rs  peek.rs  peer.rs  project.rs  screen.rs  send.rs  session.rs  status.rs  system.rs  task.rs  teams.rs  tmux_compat.rs  worktree.rs
crates/rdv/tests/: group_cli.rs  project_cli.rs
docker/: entrypoint.sh
docs/: AGENTS.md  API.md  ARCHITECTURE.md  AUTOMATION.md  DEPLOYMENT.md  DEVELOPMENT.md  ENHANCEMENTS.md  MIGRATION.md  MOBILE_ARCHITECTURE.md  MOBILE_TERMINAL_SCROLL.md  MULTI_INSTANCE.md  NATIVE_APP_RESEARCH.md  ORCHESTRATOR_CODE_REVIEW.md  ORCHESTRATOR_FIRST.md  ORCHESTRATOR_FIRST_MODE.md  POSTGRES_MIGRATION.md  RDV_CLI.md  README.md  SETUP.md  SUPERVISOR_DEPLOY.md  mobile-bridge-spike-test-plan.md  mobile-deep-links.md  mobile-firebase-setup.md  mobile-store-submission.md  openapi.yaml
drizzle/: 0000_unusual_the_spike.sql  0001_robust_galactus.sql  0002_add_repo_to_folder_preferences.sql  0003_eager_pixie.sql  0004_tense_gertrude_yorkes.sql  0005_demonic_hannibal_king.sql  0006_modern_fenris.sql  0008_add_scrollback_settings.sql  0008_dizzy_chameleon.sql  0008_gorgeous_black_knight.sql  0008_true_shotgun.sql  0009_add_orchestrator_unique_constraints.sql  0009_condemned_network.sql  0009_fat_ultragirl.sql  0009_puzzling_gravity.sql  0010_condemned_network.sql  0010_quiet_exodus.sql  0011_multi_gh_accounts.sql  0011_past_shotgun.sql  0012_agent_todo_session_id.sql  0012_fast_valkyrie.sql  0013_add_notifications_enabled.sql  0013_mean_nightmare.sql  0013_tiresome_lenny_balinger.sql  0014_add_terminal_session_scope_key.sql  0015_unique_scope_key.sql  0016_clear_scope_key_on_closed_sessions.sql  0017_add_ssh_connection.sql  0018_drop_legacy_folder_id_bridge.sql  0019_notification_severity_coalesce_prefs.sql  0020_add_model_proxy_token.sql  0021_add_model_usage_event.sql  0022_add_automation_tables.sql  0023_add_chat_coordination.sql  0024_add_webhook_delivery.sql  0025_drop_message_replay_cursor.sql  0026_add_agent_activity_status_at.sql  0027_add_migration_tables.sql  0028_add_claude_limits_pool.sql
electron/: tsconfig.json
hooks/: hooks.json
mobile/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
public/: manifest.json  sw.js  voice-processor.js
scripts/: backfill-user-emails.ts  check-schema-drift.ts  codegen-schema.ts  db-reconcile-fk-drop.ts  deploy-flock.ts  deploy-lib.ts  deploy-lock.ts  deploy-setup.sh  deploy.ts  download-nerd-fonts.sh  download-nerd-fonts.ts  dump-main-sql.ts  init.sh  install.sh  instance-bootstrap-db.mjs  instance-provision-merge.mjs  mcp-server.mjs  migrate-agent-provider.ts  migrate-agent-sessions.ts  (+15 more)
(+2529 files in other folders)
