[package]
name = "rdv-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Remote Dev - shared logic between CLI and server"

[features]
default = ["client"]
client = ["dep:reqwest", "dep:hyper-util", "dep:hyper", "dep:http-body-util"]
db = ["dep:rusqlite"]
ts-types = ["dep:ts-rs"]

[dependencies]
# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Database (optional - only for rdv-server)
rusqlite = { workspace = true, optional = true }

# HTTP client (for unix socket communication)
reqwest = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Time & UUID
chrono.workspace = true
uuid.workspace = true

# Utilities
which.workspace = true
dirs.workspace = true
md5.workspace = true
base64.workspace = true
rand.workspace = true

# TypeScript type generation (optional)
ts-rs = { version = "10", optional = true, features = ["chrono-impl", "uuid-impl", "serde-compat", "serde-json-impl"] }

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
