[package]
name = "rdv-server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Remote Dev backend server - REST API and WebSocket over unix sockets"

[[bin]]
name = "rdv-server"
path = "src/main.rs"

[dependencies]
# Core library
rdv-core = { path = "../rdv-core" }

# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
hyper-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Auth
base64.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
dirs.workspace = true
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
