[package]
name = "rdv-server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Remote Dev backend server - REST API and WebSocket over unix sockets"

[[bin]]
name = "rdv-server"
path = "src/main.rs"

[features]
default = []
embeddings = ["rdv-sdk/embeddings"]
extensions = ["rdv-sdk/extensions"]

[dependencies]
# Core library (with database support)
rdv-core = { path = "../rdv-core", features = ["db"] }

# SDK for memory and embeddings
rdv-sdk = { path = "../rdv-sdk" }

# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
hyper-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Auth
base64.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
dirs.workspace = true
libc.workspace = true

# MCP (Model Context Protocol)
rmcp.workspace = true
schemars.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
