[package]
name = "rdv"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Remote Dev orchestration CLI - multi-agent coordination with self-improvement"

[[bin]]
name = "rdv"
path = "src/main.rs"

[features]
default = []
# HTTP API mode - uses Next.js API instead of direct SQLite
# Enable with: cargo build --features http-api
http-api = []

[dependencies]
# Core library
rdv-core = { path = "../rdv-core" }

# CLI framework
clap.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging/tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Database (until migrated to rdv-core)
rusqlite.workspace = true

# HTTP client (for API communication)
reqwest.workspace = true

# Utilities
chrono.workspace = true
uuid.workspace = true
dirs.workspace = true
directories.workspace = true
colored.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
md5.workspace = true
which.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
