[package]
name = "rdv"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Remote Dev orchestration CLI - multi-agent coordination with self-improvement"

[[bin]]
name = "rdv"
path = "src/main.rs"

[dependencies]
# Core library (client + direct DB access for hybrid approach)
# - client: HTTP API for server-specific ops (sessions, tmux, WebSocket)
# - db: Direct SQLite access for local ops (memory, learning, knowledge)
rdv-core = { path = "../rdv-core", default-features = true, features = ["client", "db"] }

# SDK for direct memory and extension access (no server needed)
rdv-sdk = { path = "../rdv-sdk", default-features = true }

# CLI framework
clap.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging/tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# HTTP client (for API communication via rdv-core client)
reqwest.workspace = true

# Utilities
chrono.workspace = true
uuid.workspace = true
dirs.workspace = true
directories.workspace = true
colored.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
md5.workspace = true
which.workspace = true
hostname.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
