[package]
name = "rdv"
version = "1.0.0"
edition = "2021"
description = "CLI for Remote Dev - manage terminal sessions, worktrees, and AI agents"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.17"
colored = "3"
chrono = "0.4"
